tests/NormalTests/paczka1/fuzzy1/12687166.err
Error in line 7: 2o0 A119 43,9
Error in line 13: bjsroF A119 31,9
Error in line 20: xwR6NVF A119 0,6
Error in line 26: He2pqm A119 92,6
Error in line 27: He2pqm S699 89,9
Error in line 25: xwR6NVF S699 113,1
Error in line 35: xwR6NVF S#20 25,5
Error in line 33: xwR6NVF S462 86,5
